--- a/_includes/scripts/bootstrap.liquid
+++ b/_includes/scripts/bootstrap.liquid
@@ -6,3 +6,12 @@
   integrity="{{ site.mdb.integrity.js }}"
   crossorigin="anonymous"
 ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  function collapsible(event) {
+    event.preventDefault(); // Prevent the default link behavior
+    var collapseElement = event.target.parentElement.nextElementSibling;
+    var collapse = new bootstrap.Collapse(collapseElement);
+    collapse.toggle(); // Toggle the collapse state
+  }
+</script>
