--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -148,7 +148,7 @@ blockquote {
 .card {
   background-color: var(--global-card-bg-color);
   margin: 0;
-  
+
   img {
     width: 100%;
   }
@@ -426,7 +426,8 @@ blockquote {
   .card {
     background-color: var(--global-card-bg-color);
     border: 1px solid var(--global-divider-color);
-
+    margin: 0;
+    
     .list-group-item {
       background-color: inherit;
       border-color: var(--global-divider-color);
