--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -434,7 +434,7 @@ blockquote {
 
       .badge {
         color: var(--global-card-bg-color) !important;
-        background-color: var(--global-theme-color) !important;
+        background-color: var(--grey-color) !important;
       }
     }
   }
