--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -421,7 +421,7 @@ blockquote {
 // CV
 
 .cv {
-  margin-bottom: 40px;
+  margin-bottom: 0px;
 
   .card {
     background-color: var(--global-card-bg-color);
@@ -434,7 +434,7 @@ blockquote {
 
       .badge {
         color: var(--global-card-bg-color) !important;
-        background-color: var(--grey-color) !important;
+        background-color: var(--global-footer-text-color) !important;
       }
     }
   }
