--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -48,7 +48,7 @@ i.iconlocation {
 }
 
 i.iconinstitution {
-  color: var(--global-theme-color);
+  color: var(--global-text-color);
   font-size: 0.95rem;
   margin-right: 0.3rem;
 }
