--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -55,12 +55,21 @@ d-article {
   // Style taken from code blocks
 
   details > summary {
-      list-style-type: '+';
+      list-style-type: none;
   }
 
-  details[open] > summary {
-      list-style-type: '-';
+  details > summary::-webkit-details-marker {
+      display: none;
   }
+
+  details > summary::before {
+      content: '+';
+  }
+
+  details[open] > summary::before {
+      content: '-';
+  }
+
 
   details {
     color: var(--global-text-color);
