--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -54,23 +54,6 @@ d-article {
 
   // Style taken from code blocks
 
-  details > summary {
-      list-style-type: none;
-  }
-
-  details > summary::-webkit-details-marker {
-      display: none;
-  }
-
-  details > summary::before {
-      content: '+';
-  }
-
-  details[open] > summary::before {
-      content: '-';
-  }
-
-
   details {
     color: var(--global-text-color);
     background-color: var(--global-code-bg-color);
@@ -85,11 +68,40 @@ d-article {
     max-width: 100%;
     summary {
       color: var(--global-theme-color);
+      position: relative;
+      cursor: pointer;
+      user-select: none;
+
+      &::before {
+        content: '+';
+        position: absolute;
+        left: -20px;
+      }
+
+      &[open]::before {
+        content: '-';
+      }
     }
     p {
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
     }
+  }
+
+  details > summary {
+      list-style-type: none;
+  }
+
+  details > summary::-webkit-details-marker {
+      display: none;
+  }
+
+  details > summary::before {
+      content: '+';
+  }
+
+  details[open] > summary::before {
+      content: '-';
   }
 
   d-contents {
