--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -72,22 +72,27 @@ d-article {
       position: relative;
       cursor: pointer;
       user-select: none;
-  
-      &::before {
-        content: '+';
-        position: absolute;
-        left: -20px;
-      }
-  
-      &[open]::before {
-        content: '-';
-      }
     }
   
     p {
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
     }
+  }
+
+  summary {list-style: none}
+  summary::-webkit-details-marker {display: none; }
+
+  details summary::before { 
+    content:"+"; 
+    color: var(--global-theme-color);
+    /* you can style it however you want, use background-image for example */
+  }
+  
+  /* By using [open] we can define different styles when the disclosure widget is open */
+  details[open] summary::before { 
+    content:"-"; 
+    color: var(--global-theme-color);
   }
 
   d-contents {
