--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -72,27 +72,25 @@ d-article {
       position: relative;
       cursor: pointer;
       user-select: none;
+      list-style: none;
+      -webkit-details-marker: none;
+    }
+
+    details summary::before {
+      content: "+";
+      color: var(--global-theme-color);
+      /* You can add more styling here as needed */
+    }
+  
+    details[open] summary::before {
+      content: "-";
+      color: var(--global-theme-color);
     }
   
     p {
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
     }
-  }
-
-  summary {list-style: none}
-  summary::-webkit-details-marker {display: none; }
-
-  details summary::before { 
-    content:"+"; 
-    color: var(--global-theme-color);
-    /* you can style it however you want, use background-image for example */
-  }
-  
-  /* By using [open] we can define different styles when the disclosure widget is open */
-  details[open] summary::before { 
-    content:"-"; 
-    color: var(--global-theme-color);
   }
 
   d-contents {
