--- a/_sass/_distill.scss
+++ b/_sass/_distill.scss
@@ -77,21 +77,37 @@ d-article {
         display: none
       }
     }
-
-    details summary::before {
-      content: "+";
-      color: var(--global-theme-color);
-    }
-  
-    details[open] summary::after {
-      content: "-";
-      color: var(--global-theme-color);
-    }
   
     p {
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
     }
+  }
+
+  details > summary {
+      list-style-type: none;
+  }
+
+  details > summary::-webkit-details-marker {
+      display: none;
+  }
+
+  details > summary::before {
+      content: '▶️';
+  }
+
+  details[open] > summary::before {
+      content: '🔽';
+  }
+
+  details {
+      border: 1px solid gray;
+      border-radius: 0.2rem;
+      padding: 0.5rem;
+  }
+
+  details[open] > summary {
+      margin-bottom: 0.5rem;
   }
 
   d-contents {
