--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -578,6 +578,62 @@ blockquote {
     }
   }
 
+  details {
+      color: var(--global-text-color);
+      background-color: var(--global-code-bg-color);
+      margin-top: 0;
+      padding: 8px 12px;
+      position: relative;
+      border-radius: 6px;
+      display: block;
+      margin-bottom: 20px;
+      grid-column: text;
+      overflow: auto;
+      max-width: 100%;
+    
+      summary {
+        color: var(--global-theme-color);
+        position: relative;
+        cursor: pointer;
+        user-select: none;
+        list-style: none;
+        -webkit-details-marker: {
+          display: none
+        }
+      }
+    
+      p {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+      }
+    }
+
+    details > summary {
+        list-style-type: none;
+    }
+
+    details > summary::-webkit-details-marker {
+        display: none;
+    }
+
+    details > summary::before {
+        content: '▶️';
+    }
+
+    details[open] > summary::before {
+        content: '🔽';
+    }
+
+    details {
+        border: 1px solid gray;
+        border-radius: 0.2rem;
+        padding: 0.5rem;
+    }
+
+    details[open] > summary {
+        margin-bottom: 0.5rem;
+    }
+
   .card {
     img {
       width: 100%;
