--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -61,3 +61,8 @@
   >
   <script src="{{ '/assets/js/theme.js' | relative_url | bust_file_cache }}"></script>
 {% endif %}
+
+<!-- Analytics -->
+{% if site.google_analytics and jekyll.environment == 'production' %} 
+  {% include analytics.html %} 
+{% endif %}
